[workspace]
members = [
    "bin",
    "interpreter",
    "parser",
    "parser-common",
    "parser-macro",
    "grammar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bjarke Bondo Andersen"]

[workspace.dependencies]
parser = { path = "parser" }
parser-common = { path = "parser-common" }
parser-macro = { path = "parser-macro" }
thiserror = "1.0.44"
tree-sitter = "0.20.10"
