[workspace]
resolver = "2"
members = [
    "ast",
    "bin",
    "interpreter",
    "parser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bjarke Bondo Andersen"]

[workspace.dependencies]
ast = { path = "ast" }
interpreter = { path = "interpreter" }
parser = { path = "parser" }
thiserror = "1.0.44"
