[package]
name = "parser-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["extra-traits"] }

[dev-dependencies]
parser-common.workspace = true
tree-sitter.workspace = true
