[package]
name = "parser"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast.workspace = true
pest.workspace = true
pest_derive.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = "1.31.0"
